--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,5 @@ Fix gemspec
 
 1.0.0 (2013-11-14)
 ------
-Initial Commit (Forked from https://github.com/basgys/emailvision)
-Changed Emailvision to Smartfocus (class and namespace name)
+Initial Commit
 
